# gittensor

./: .coverage  .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  Dockerfile  GITTENSOR_STATUS.md  PR_DESCRIPTION.md  README.md  SECURITY.md  docker-compose.miner.yml  docker-compose.vali.yml  docker-compose.yml  docker-entrypoint.sh  env.example  fake_test_file.py  issue-pr-pagination-early-stop.md  issue.md  issue_plan.md  min_compute.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  solution.py  vulture_whitelist.py
.githooks/: pre-push
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: weight_adjustment.md
.github/workflows/: docker-publish.yml  lint.yml  tests.yml  typecheck.yml
auto_updater/: auto_updater_main.py
auto_updater/auto_update/: __init__.py  detector.py  manager.py  orchestrator.py  pm2_interface.py
cli/issue_commands/: __init__.py  admin.py  helpers.py  mutations.py  val.py  view.py
docs/: DOCKER.md
gittensor/: __init__.py  classes.py  constants.py  mock.py  synapses.py
gittensor/cli/: CLI_REFERENCE.md  __init__.py  cli_reference_table.md  config_commands.py  doctor.py  endpoint_resolution.py  issue_commands.py  json_output.py  main.py  paths.py
gittensor/miner/: .env.example  README.md  __init__.py  broadcast.py  issue_prefs.py  token_mgmt.py
gittensor/utils/: __init__.py  bounty_attribution_fix.py  config.py  github_api_tools.py  github_etag_cache.py  github_iso_time.py  logging.py  misc.py  models.py  security_validation.py  uids.py  utils.py
gittensor/validator/: .env.example  README.md  __init__.py  credibility.py  emission_allocation.py  emissions.py  forward.py  pat_handler.py  pat_storage.py  score_normalization.py  validator_protocol.py
issue_discovery/: issue-discovery-rewards.md
neurons/: miner.py  validator.py
neurons/base/: miner.py  neuron.py  validator.py
patches/: das-github-mirror-issue-1010-is_transferred.patch
patches/das-github-mirror-issue-1010/: README.txt
scripts/: capture_terminal.py  issue_checker.py  issue_scout.py  manage_weights.py  master_repos_validator.py  miner-entrypoint.sh  pr_body_builder.py  pr_conflict_check.py  pr_creator.py  pr_dashboard.py  pr_diff_quality.py  pr_diff_summary.py  pr_dup_detect.py  pr_evidence.json  pr_flow.py  pr_label_watch.py  pr_merge_predictor.py  pr_pregate.py  pr_quality_check.py  pr_scoring_checklist.py  pre_submit.py  repo_weight_tool.py  review_response.py  run_autoupdater.sh  run_miner.sh  run_validator.sh  setup_dev.sh  setup_env.sh  setup_env_light.sh  time_decay.py  update_repo_names.py  upgrade_all_prs.py  vali-entrypoint.sh
smart-contracts/ink/: Cargo.toml  errors.rs  events.rs  lib.rs  tests.rs  types.rs
smart-contracts/issues-v0/: Cargo.toml  errors.rs  events.rs  lib.rs  runtime_calls.rs  tests.rs  types.rs
smart-contracts/repo-registry/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
smart-contracts/solidity/: IssueBountyManager.contract  IssueBountyManager.sol  IssueBountyManager.wasm
tests/: README.md  TEST_FIRST_MOVER_ADVANTAGE.md  __init__.py  conftest.py  score_calculator.py  test_aditya.txt  test_classes.py  test_first_mover_advantage.py  test_first_mover_standalone.py  test_forward_emission_blending.py  test_github_repo_access_validation.py  test_issue_discovery_scan_validity.py  test_pat_identity_collision.py  test_pr_guard_regressions.py  test_repo_scan_inactive_repos.py  test_solver_selection.py  test_storage_atomicity.py  test_synapses.py
tests/auto_updater/: __init__.py  test_command_injection.py
tests/cli/: __init__.py  conftest.py  test_cli_helpers.py  test_cli_json_error_output.py  test_cli_validation.py  test_config_get.py  test_config_set.py  test_config_set_corruption.py  test_config_unset.py  test_fill_percent.py  test_helpers.py  test_issue_command_types.py  test_issue_predict.py  test_issue_register.py  test_issue_single_read.py  test_issue_submission.py  test_issues_list_fill_pct.py  test_issues_list_json.py  test_loading_context_json_safety.py  test_miner_advisor.py  test_miner_commands.py  test_miner_endpoint_resolution.py  test_miner_helpers.py  test_miner_languages.py  test_miner_repos.py  test_miner_resolve_endpoint.py  test_miner_scan.py  test_miner_score.py  test_miner_score_profile.py  test_miner_wallet_directory.py  test_pending_harvest_read_error.py  test_pending_harvest_single_connection.py  test_predictions.py  test_repo_simulate.py  test_submissions.py  test_vote_explain.py  test_vote_list_json.py  test_wallet_config_resolution.py
tests/miner/: test_token_mgmt.py
tests/neurons/: test_validator_shutdown.py
tests/utils/: __init__.py  conftest.py  network.py  test_count_tracked_open_issues.py  test_github_api_advanced.py  test_github_api_graphql_errors.py  test_github_api_rate_limit.py  test_github_api_tools.py  test_github_etag_cache.py  test_issue_competitions_storage_utils.py  test_logging.py  test_mirror_client.py  test_mirror_models.py  test_null_author_guards.py  test_uids.py  test_utils.py
tests/validator/: __init__.py  conftest.py  test_base_score.py  test_blend_emission_pools.py  test_bounty_vote_decision.py  test_bulk_store_evaluation.py  test_cached_issue_discovery_storage.py  test_cached_repo_weight_refresh.py  test_cached_uid_issue_discovery_storage.py  test_calculate_issue_multiplier.py  test_collateral.py  test_collect_node_signatures.py  test_concurrent_forward_scoring_guard.py  test_contract_client_reads.py  test_contract_client_transactions.py  test_credibility.py  test_credibility_math_and_reward_norm.py  test_datetime_utils.py  test_duplicate_github_id_eligible_miners.py  test_duplicate_penalty_propagation.py  test_dynamic_emissions_advanced.py  test_dynamic_open_pr_threshold.py  test_eligibility_resolver.py  test_ema_renormalization.py  test_emission_allocate.py  test_emission_allocation.py  test_emission_allocation_coverage.py  test_emission_share_allocation.py  (+65 more)
(+172 files in other folders)
