[project]
name = "gittensor"
version = "5.0.0"
description = "gittensor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "bittensor==10.0.1",
    "bittensor-cli==9.17.0",
    "bittensor-commit-reveal==0.4.0",
    "bittensor-wallet==4.0.0",
    "click",
    "levenshtein==0.27.3",
    "psycopg[binary]==3.3.3",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "rich",
    "substrate-interface",
    "tree-sitter==0.24.0",
    "tree-sitter-language-pack==0.7.2",
    "wandb==0.21.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.0",
    "pyright",
    "ruff==0.14.10",
    "pre-commit>=4.0",
    "vulture==2.16",
]
debug = [
    "debugpy==1.8.11",
    "fastapi==0.110.1",
    "uvicorn==0.32.0",
]

[project.scripts]
gitt = "gittensor.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vulture]
# Dead-code scanner. Run via pre-push hook (`uv run vulture`) or directly.
# False positives live in `vulture_whitelist.py`; framework-driven names are
# matched here so individual call sites don't need annotation.
paths = ["gittensor", "neurons", "scripts", "tests"]
exclude = [
    ".venv/",
    "smart-contracts/",
    "assets/",
    # Issue-bounty contract client: enum members and dataclass fields mirror
    # the on-chain shape, so unused-name reports here are not actionable
    "gittensor/validator/issue_competitions/contract_client.py",
    # das-github-mirror response schema: dataclass fields mirror the upstream
    # wire format and are kept even when no validator code reads them today
    "gittensor/utils/mirror/models.py",
]
min_confidence = 60
sort_by_size = true
ignore_decorators = [
    # Click command/group registration - vulture cannot see the registry calls
    "@click.command",
    "@click.group",
    "@*.command",
    "@*.group",
    # pytest fixtures (incl. autouse) are resolved by pytest, not by import
    "@pytest.fixture",
]
ignore_names = [
    # `__exit__(self, exc_type, exc_value, traceback)` - dunder signature
    "exc_type",
    "exc_value",
    "exc",
    "tb",
    "traceback",
    # pytest hook functions defined in conftest.py
    "pytest_*",
    # Click subclass overrides invoked by the framework
    "get_help",
    "command_class",
    # `lru_cache`'s synthetic cache-buster argument used by ttl_cache()
    "ttl_hash",
    # MagicMock attribute consumed by the mock framework, not by us
    "side_effect",
    # psycopg Connection attributes (autocommit setter, prepared-statement
    # threshold) - written for side effects, read inside the driver
    "autocommit",
    "prepare_threshold",
    # Required-env-var capture; kept for parity with `.env.example` even when
    # no code reads it directly (wandb consumes WANDB_API_KEY from the env)
    "WANDB_API_KEY",
    # Attribute set on IssueCompetitionContractClient test doubles - the
    # client itself is excluded above, so reads of this attribute are invisible
    "contract_address",
    # PRInfo TypedDict fields populated and read via `dict.get(...)`; vulture
    # cannot link a string-keyed dict access to a typed attribute name
    "author_id",
    "review_count",
    # Consumed only by `gittensor/utils/mirror/models.py`, excluded above as
    # wire-format schema; the helper itself is otherwise invisible to vulture
    "parse_optional_github_iso_to_utc",
]
