[project]
name = "gittensor"
version = "5.0.0"
description = "gittensor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "bittensor==10.3.1",
    "bittensor-cli==9.21.1",
    "click==8.3.2",
    "psycopg[binary]==3.3.4",
    "rich==14.3.3",
    "tree-sitter==0.24.0",
    "tree-sitter-language-pack==0.7.2",
    "wandb==0.26.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.6.0",
    "pyright==1.1.408",
    "pytest==9.0.3",
    "ruff==0.15.12",
    "vulture==2.16",
]
debug = [
    "debugpy==1.8.20",
]

[project.scripts]
gitt = "gittensor.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vulture]
# Dead-code scanner
# Surviving suppressions live in `vulture_whitelist.py`
paths = ["gittensor", "neurons", "scripts", "vulture_whitelist.py"]
ignore_decorators = [
    # Click command/group registration - vulture cannot see the registry calls
    "@click.command",
    "@click.group",
    "@*.command",
    "@*.group",
]
exclude = [
    ".venv/",
    "smart-contracts/",
    "assets/",
    # Upstream bittensor-template scaffolding
    "neurons/base/",
    # On-chain shape mirror - dataclass/enum members not actionable
    "gittensor/validator/issue_competitions/contract_client.py",
    # das-github-mirror wire-format schema
    "gittensor/utils/mirror/models.py",
]
min_confidence = 60
sort_by_size = true
