[package]
name = "issue_bounty_manager"
version = "0.1.0"
authors = ["Gittensor Team"]
edition = "2021"

[dependencies]
ink = { version = "5", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
